<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/sort_by_title"
        android:title="@string/sort_by_title_option" >
        <menu>
            <item android:id="@+id/ascending_title"
                android:title="@string/ascending_option" />
            <item android:id="@+id/descending_title"
                android:title="@string/descending_option" />
        </menu>
    </item>
    <item android:id="@+id/sort_by_date"
        android:title="@string/sort_by_date_option" >
        <menu>
            <item android:id="@+id/ascending_date"
                android:title="@string/ascending_option" />
            <item android:id="@+id/descending_date"
                android:title="@string/descending_option" />
        </menu>
    </item>
</menu>